<resources>
    <string name="app_name">Matrice 210</string>
    <!-- Dashboard -->
    <string name="sdk_version">Version: %1$s</string>
    <string name="wsbridge_ip">192.168.43.1</string>

    <!-- Interfaces -->
    <string name="pilot_interface">Pilot interface</string>
    <string name="mission_interface">Mission interface</string>

    <!-- Status bar -->
    <string name="emergency_stop">Emergency stop</string>
    <string name="ob_state_connected"> OnBoard connected</string>
    <string name="ob_state_disconnected"> OnBoard disconnected</string>


    <!-- Mission -->
    <string name="mission_takeoff">Take off</string>
    <string name="mission_landing">Landing</string>
    <string name="mission_stop">Stop mission</string>
    <string name="mission_send_command">Send custom message</string>
    <string name="mission_default_command">Hello world from Android</string>
    <string name="mission_release_emergency">Release emergency stop</string>
    <!-- Position - Velocity misison -->
    <string name="mission_position_velocity">Position - Velocity mission</string>
    <string name="mission_x">X</string>
    <string name="mission_y">Y</string>
    <string name="mission_z">Z</string>
    <string name="mission_yaw">Yaw</string>
    <string name="mission_default_x">0</string>
    <string name="mission_default_y">0</string>
    <string name="mission_default_z">0</string>
    <string name="mission_default_yaw">0</string>
    <string name="mission_position">Move from offset (m, deg)</string>
    <string name="mission_velocity">Move with velocity (m/s, deg/s)</string>
    <!-- Waypoints -->
    <string name="mission_waypoints">Waypoints mission</string>
    <string name="mission_waypoints_add">Add position</string>
    <string name="mission_waypoints_run">Play sequence</string>
    <string name="mission_waypoints_clear">Clear sequence</string>
    <string name="mission_waypoints_pause">Pause</string>
    <string name="mission_waypoints_resume">Resume</string>
    <string name="mission_waypoints_stop">Stop</string>
    <!-- Antenna -->
    <string name="mission_antenna">[%1$c] Antenna : %2$d</string>
    <string name="mission_obtain_control_authority">Reobtain control authority</string>
</resources>
