<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingEnd="60dp"
    android:paddingStart="60dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:paddingTop="40dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </TableRow>

    <TextView
        android:id="@+id/txtView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_pilot_interface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="14dp"
        android:text="@string/pilot_interface"
        android:textAllCaps="false"
        android:textColor="@color/background_blue"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_moc_interface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="14dp"
        android:text="@string/moc_interface"
        android:textAllCaps="false"
        android:textColor="@color/background_blue"
        android:textSize="14sp" />


    <TableRow
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </TableRow>

    <!-- Dummy item to prevent editTxt_bridge from receiving focus -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <EditText
        android:id="@+id/editTxt_bridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/gray"
        android:digits="0123456789.\n"
        android:gravity="center"
        android:text="@string/wsbridge_ip"
        android:imeOptions="actionDone"
        android:maxLength="15"
        android:maxLines="1"
        android:padding="2dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/white"
        android:textSize="15sp"
        android:nextFocusUp="@id/editTxt_bridge"
        android:nextFocusLeft="@id/editTxt_bridge"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        tools:text="Version"/>

</TableLayout>
